Feat: Database 설정 추가
이슈 번호: #4

- 이전 커밋(0d56fe9)에서 DB 연결 관련 설정 필요했던 것 해결.

--- a/myBlog-api/src/main/resources/application.properties
+++ b/myBlog-api/src/main/resources/application.properties
@@ -1,6 +1,15 @@
+# ------------------------------------------------------------
+#
 # DataBase Settings : hikariCP : https://github.com/brettwooldridge/HikariCP
+#
+# ------------------------------------------------------------
+# Hikari ??? dataSourceClassName? ???? ????,
+# MySQL? network timeout ??? ??? ??? ??? ???
+# jdbcUrl + driverClassName ??? ?? ??.
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.jdbc-url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_SCHEMA}?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+# DB ???, ????
 spring.datasource.hikari.username=${DB_USER}
 spring.datasource.hikari.password=${DB_PASSWORD}
-spring.datasource.hikari.pool-name=HikariConnectionPool
+# Pool ?? (Alias)
+spring.datasource.hikari.pool-name=Hikari Connection Pool
