--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -26,6 +26,11 @@
                 "ts": "never",
                 "tsx": "never"
             }
+        ],
+        "react/react-in-jsx-scope": "off",
+        "react/function-component-definition": [
+            2,
+            { "namedcomponents": "arrow-function" }
         ]
     },
     "settings": {
