--- a/myBlog-frontend/package.json
+++ b/myBlog-frontend/package.json
@@ -19,9 +19,14 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/test-utils": "^2.4.1",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^22.1.0",
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "tailwindcss": "^3.3.6",
     "vite": "^4.4.11",
     "vitest": "^0.34.6"
   }
