--- a/myBlog-frontend/package.json
+++ b/myBlog-frontend/package.json
@@ -25,6 +25,7 @@
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/test-utils": "^2.4.1",
     "autoprefixer": "^10.4.16",
+    "daisyui": "^4.4.19",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^22.1.0",
