chore: gitignore 파일명 변경
이슈 번호: #4

- application.properties => application.yml
- 계층 구조 속성 설정에는 yml 파일이 더 용이하기 때문에 yaml 파일로 변경

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -167,7 +167,7 @@ gradle-app.setting
 # Java heap dump
 *.hprof
 
-# db 설정
-application.properties
+# 프로젝트 설정
+application.yml
 
 # End of https://www.toptal.com/developers/gitignore/api/java,gradle,intellij
