--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -19,11 +19,16 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-web-services'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
-	implementation 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
+    //	lombok
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+	// hikari
+	implementation 'com.zaxxer:HikariCP:3.4.5'
 }
 
 tasks.named('test') {
