--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
         "@types/react": "^18.2.42",
         "@types/react-dom": "^18.2.17",
         "@types/react-router-dom": "^5.3.3",
+        "axios": "^1.6.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.20.1",
