chore: 화살표 함수로 함수 선언 방식 통일
이슈 번호: #9

- eslint 변경

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -27,10 +27,14 @@
                 "tsx": "never"
             }
         ],
+        "import/prefer-default-export": "off",
         "react/react-in-jsx-scope": "off",
         "react/function-component-definition": [
-            2,
-            { "namedcomponents": "arrow-function" }
+            "error",
+            {
+                "namedComponents": "arrow-function",
+                "unnamedComponents": "arrow-function"
+            }
         ]
     },
     "settings": {
