Fix: ContextPath 설정 추가
이슈 번호: #33

- rest api url이 `/api`로 시작하도록 context root path 설정

--- a/myBlog-api/src/main/resources/application.properties
+++ b/myBlog-api/src/main/resources/application.properties
@@ -1,5 +1,16 @@
 # ------------------------------------------------------------
 #
+# Servlet Settings
+#
+# 인코딩 관련: https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#application-properties.server.server.servlet.encoding.enabled
+#
+# ------------------------------------------------------------
+server.servlet.context-path=/api
+server.servlet.encoding.charset=utf-8
+server.servlet.encoding.force=true
+
+# ------------------------------------------------------------
+#
 # DataBase Settings : hikariCP : https://github.com/brettwooldridge/HikariCP
 #
 # ------------------------------------------------------------
@@ -13,13 +24,3 @@ spring.datasource.hikari.username=${DB_USER}
 spring.datasource.hikari.password=${DB_PASSWORD}
 # Pool 이름 (Alias)
 spring.datasource.hikari.pool-name=Hikari Connection Pool
-
-# ------------------------------------------------------------
-#
-# Servlet Settings
-#
-# 인코딩 관련: https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#application-properties.server.server.servlet.encoding.enabled
-#
-# ------------------------------------------------------------
-server.servlet.encoding.charset=utf-8
-server.servlet.encoding.force=true
