--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -29,6 +29,7 @@
         ],
         "import/prefer-default-export": "off",
         "react/react-in-jsx-scope": "off",
+        "react/require-default-props": "off", // 기본 props 미설정
         "react/function-component-definition": [
             "error",
             {
