--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@headlessui/react": "^1.7.17",
+        "@tanstack/react-query": "^5.14.6",
+        "@tanstack/react-query-devtools": "^5.15.0",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
