--- a/myBlog-api/pom.xml
+++ b/myBlog-api/pom.xml
@@ -55,16 +55,11 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- Springfox for Swagger UI -->
+		<!-- SpringDoc for Swagger UI -->
 		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-boot-starter</artifactId>
-			<version>3.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<version>3.0.0</version>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.3.0</version>
 		</dependency>
 	</dependencies>
 
