--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
         "axios": "^1.6.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-quill": "^2.0.0",
         "react-router-dom": "^6.20.1",
         "react-scripts": "^5.0.1",
         "typescript": "^4.9.5",
