chore: eslint quote 설정 추가
이슈 번호: #24

- single quote 규칙 추가

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -36,7 +36,8 @@
                 "namedComponents": "arrow-function",
                 "unnamedComponents": "arrow-function"
             }
-        ]
+        ],
+        "quotes": ["error", "single"]
     },
     "settings": {
         "import/resolver": {
