--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,5 +24,17 @@ services:
     depends_on:
       - db
 
+  nginx:
+    build: ./myBlog-frontend
+    env_file:
+      - .env
+    ports:
+      - "${HTTP_PORT}:80"
+    volumes:
+      - "./nginx/nginx.conf:/etc/nginx/nginx.conf:ro"
+    depends_on:
+      - db
+      - api
+
 volumes:
   mysql_data:
