--- a/myBlog-api/src/main/resources/application.properties
+++ b/myBlog-api/src/main/resources/application.properties
@@ -18,9 +18,9 @@ server.servlet.encoding.force=true
 # MySQL에서 network timeout을 적절히 지원하지 않아 문제가 있음.
 # jdbcUrl + driverClassName을 대신 사용.
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.hikari.jdbc-url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+spring.datasource.hikari.jdbc-url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_SCHEMA}?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
 # DB 유저명, 비밀번호
-spring.datasource.hikari.username=${MYSQL_USER}
-spring.datasource.hikari.password=${MYSQL_PASSWORD}
+spring.datasource.hikari.username=${DB_USER}
+spring.datasource.hikari.password=${DB_PASSWORD}
 # Pool 이름 (Alias)
 spring.datasource.hikari.pool-name=Hikari Connection Pool
