Fix: default produces media type 설정
이슈 번호: #63

- 모든 엔드포인트가 공통적으로 `application/json;charset=utf-8` 타입의 응답을 생성하므로 이를 공통 설정으로 변경.

--- a/myBlog-api/src/main/resources/application.properties
+++ b/myBlog-api/src/main/resources/application.properties
@@ -9,6 +9,8 @@ server.servlet.context-path=/api
 server.servlet.encoding.charset=utf-8
 server.servlet.encoding.force=true
 
+springdoc.default-produces-media-type=application/json;charset=utf-8
+
 # ------------------------------------------------------------
 #
 # DataBase Settings : hikariCP : https://github.com/brettwooldridge/HikariCP
