refactor: 폴더 구조 변경
이슈 번호: #34

- index.ts 파일 삭제
- import문을 절대경로로 변경
- import 우선순위 설정 (trivago 플러그인 설치)

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -8,8 +8,7 @@
         "airbnb",
         "plugin:react/recommended",
         "plugin:@typescript-eslint/recommended",
-        "prettier",
-        "prettier/prettier"
+        "prettier"
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
@@ -27,6 +26,7 @@
                 "tsx": "never"
             }
         ],
+        "arrow-body-style": "off",
         "import/prefer-default-export": "off",
         "react/react-in-jsx-scope": "off",
         "react/require-default-props": "off", // 기본 props 미설정
