--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
         ]
     },
     "devDependencies": {
+        "@trivago/prettier-plugin-sort-imports": "^4.3.0",
         "@typescript-eslint/eslint-plugin": "^6.13.2",
         "@typescript-eslint/parser": "^6.13.2",
         "autoprefixer": "^10.4.16",
@@ -59,7 +60,7 @@
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "postcss": "^8.4.32",
-        "prettier": "3.1.0",
+        "prettier": "^3.1.1",
         "tailwindcss": "^3.3.6"
     }
 }
