--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -8,7 +8,8 @@
         "airbnb",
         "plugin:react/recommended",
         "plugin:@typescript-eslint/recommended",
-        "prettier"
+        "prettier",
+        "prettier/prettier"
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
