Fix: 프로젝트 코드 로그 레벨을 debug까지 출력하도록 수정
이슈 번호: #67

--- a/myBlog-api/src/main/resources/application.properties
+++ b/myBlog-api/src/main/resources/application.properties
@@ -11,6 +11,8 @@ server.servlet.encoding.force=true
 
 springdoc.default-produces-media-type=application/json;charset=utf-8
 
+logging.level.com.github.cheesecat47.myBlog=debug
+
 # ------------------------------------------------------------
 #
 # DataBase Settings : hikariCP : https://github.com/brettwooldridge/HikariCP
