Feat: 로그인 성공 시 토큰 발급 로직 구현
이슈 번호: #70

- 로그인 성공 시 토큰 발급 로직 구현
- JJWT 라이브러리 사용
- 발급 받은 Refresh Token을 DB에 저장하는 과정 추가 구현 필요

--- a/myBlog-api/src/main/resources/application.properties
+++ b/myBlog-api/src/main/resources/application.properties
@@ -15,6 +15,17 @@ logging.level.com.github.cheesecat47.myBlog=debug
 
 # ------------------------------------------------------------
 #
+# JWT Settings
+#
+# ------------------------------------------------------------
+jwt.salt=${JWT_SALT}
+# 1 hour (millis)
+jwt.access-token.expiretime=3600000
+# 30 days (millis)
+jwt.refresh-token.expiretime=2592000000
+
+# ------------------------------------------------------------
+#
 # DataBase Settings : hikariCP : https://github.com/brettwooldridge/HikariCP
 #
 # ------------------------------------------------------------
