Fix be up script

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,6 +1,5 @@
 # syntax=docker/dockerfile:1
-
-FROM eclipse-temurin:17-jdk-jammy
+FROM eclipse-temurin:17-jdk-jammy AS builder
 
 WORKDIR /app
 
@@ -10,3 +9,9 @@ COPY mvnw pom.xml ./
 RUN ./mvnw dependency:resolve
 
 COPY src ./src
+
+RUN ./mvnw clean package -Dmaven.test.skip=true
+
+FROM eclipse-temurin:17-jre-jammy
+
+COPY --from=builder /app/target/*SNAPSHOT.jar /app.jar
