--- a/api/pom.xml
+++ b/api/pom.xml
@@ -8,10 +8,10 @@
 		<version>3.2.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.github.cheesecat47</groupId>
-	<artifactId>myBlog</artifactId>
+	<groupId>com.github.rerolog</groupId>
+	<artifactId>rerolog</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>myBlog</name>
+	<name>rerolog</name>
 	<description>REST API server for my personal blog</description>
 	<properties>
 		<java.version>17</java.version>
