--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -1,15 +1,11 @@
-
-user  nginx;
 worker_processes  auto;
 
 error_log  /var/log/nginx/error.log notice;
 pid        /var/run/nginx.pid;
 
-
 events {
-    worker_connections  1024;
+    worker_connections  4096; ## Default: 1024
 }
-
 
 http {
     include       /etc/nginx/mime.types;
@@ -22,11 +18,20 @@ http {
     access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
-    #tcp_nopush     on;
-
     keepalive_timeout  65;
 
-    #gzip  on;
-
     include /etc/nginx/conf.d/*.conf;
+
+    server {
+        listen 80;
+
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+
+        location / {
+            alias /usr/share/nginx/html/;
+            try_files $uri $uri/ /index.html;
+        }
+    }
 }
