--- a/deploy/compose.yml
+++ b/deploy/compose.yml
@@ -67,9 +67,10 @@ services:
     networks:
       - rerolog-network
     ports:
-      - ${NGINX_PORT}:80
+      - ${NGINX_PORT}:443
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/.cert:/.cert:ro
       - fe-build:/usr/share/nginx/html
     depends_on:
       - api
