--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -9,7 +9,6 @@ events {
 
 http {
     include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
@@ -23,7 +22,10 @@ http {
     include /etc/nginx/conf.d/*.conf;
 
     server {
-        listen 80;
+        server_name rerolog.koreacentral.cloudapp.azure.com;
+        listen 443 ssl;
+        ssl_certificate /.cert/fullchain.pem;
+        ssl_certificate_key /.cert/privkey.pem;
 
         proxy_http_version 1.1;
         proxy_set_header Host $host;
