--- a/deploy/compose.dev.yml
+++ b/deploy/compose.dev.yml
@@ -3,4 +3,4 @@ services:
     ports:
       - ${NGINX_PORT}:80
     volumes:
-      - ./nginx/nginx.dev.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/nginx.dev.conf:/etc/nginx/conf.d/default.conf:ro
