--- a/deploy/compose.prod.yml
+++ b/deploy/compose.prod.yml
@@ -1,7 +1,8 @@
 services:
   nginx:
     ports:
-      - ${NGINX_PORT}:443
+      - 80:80
+      - 443:443
     volumes:
-      - ./nginx/nginx.prod.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/nginx.prod.conf:/etc/nginx/conf.d/default.conf:ro
       - ./nginx/.cert:/.cert:ro
