--- a/deploy/nginx/nginx.dev.conf
+++ b/deploy/nginx/nginx.dev.conf
@@ -1,36 +1,22 @@
-worker_processes  auto;
-
-error_log  /var/log/nginx/error.log notice;
-pid        /var/run/nginx.pid;
-
-events {
-    worker_connections  4096; ## Default: 1024
-}
-
-http {
-    include       /etc/nginx/mime.types;
-
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+server {
+    listen       80;
+    listen  [::]:80;
+    server_name  localhost;
 
     access_log  /var/log/nginx/access.log  main;
 
-    sendfile        on;
-    keepalive_timeout  65;
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html;
+        try_files $uri $uri/ /index.html;
+    }
 
-    include /etc/nginx/conf.d/*.conf;
-
-    server {
-        listen 80;
-
-        proxy_http_version 1.1;
+    location /api {
+        proxy_pass http://api:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-
-        location / {
-            alias /usr/share/nginx/html/;
-            try_files $uri $uri/ /index.html;
-        }
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Host $server_name;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
