--- a/deploy/nginx/nginx.prod.conf
+++ b/deploy/nginx/nginx.prod.conf
@@ -1,39 +1,34 @@
-worker_processes  auto;
+server {
+    listen       80;
+    listen  [::]:80;
+    listen       443 ssl;
+    listen  [::]:443 ssl;
+    server_name rerolog.koreacentral.cloudapp.azure.com;
+    ssl_certificate /.cert/fullchain.pem;
+    ssl_certificate_key /.cert/privkey.pem;
 
-error_log  /var/log/nginx/error.log notice;
-pid        /var/run/nginx.pid;
+    access_log  /var/log/nginx/host.access.log  main;
 
-events {
-    worker_connections  4096; ## Default: 1024
-}
+    if ($scheme = http) {
+        return 301 https://$server_name$request_uri;
+    }
 
-http {
-    include       /etc/nginx/mime.types;
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html;
+        try_files $uri $uri/ /index.html;
+    }
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-
-    access_log  /var/log/nginx/access.log  main;
-
-    sendfile        on;
-    keepalive_timeout  65;
-
-    include /etc/nginx/conf.d/*.conf;
-
-    server {
-        server_name rerolog.koreacentral.cloudapp.azure.com;
-        listen 443 ssl;
-        ssl_certificate /.cert/fullchain.pem;
-        ssl_certificate_key /.cert/privkey.pem;
-
-        proxy_http_version 1.1;
+    location /api {
+        proxy_pass http://api:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Host $server_name;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-        location / {
-            alias /usr/share/nginx/html/;
-            try_files $uri $uri/ /index.html;
-        }
+    location /.well-known/acme-challenge {
+        root /.cert/;
     }
 }
