--- a/deploy/nginx/nginx.dev.conf
+++ b/deploy/nginx/nginx.dev.conf
@@ -3,12 +3,24 @@ server {
     listen  [::]:80;
     server_name  localhost;
 
-    access_log  /var/log/nginx/access.log  main;
+    server_tokens off;
+
+    access_log  /var/log/nginx/access.log  combined;
+
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Content-Type-Options   nosniff;
+
+    client_max_body_size 10M;
+    client_body_timeout 60;
+    client_header_timeout 60;
+    keepalive_timeout  65;
+    send_timeout 120;
 
     location / {
         root   /usr/share/nginx/html;
         index  index.html;
         try_files $uri $uri/ /index.html;
+        autoindex off;
     }
 
     location /api {
@@ -19,4 +31,6 @@ server {
         proxy_set_header X-Forwarded-Host $server_name;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+
+    error_page 400 401 403 404 500 /error.html;
 }
