--- a/deploy/nginx/nginx.prod.conf
+++ b/deploy/nginx/nginx.prod.conf
@@ -6,8 +6,20 @@ server {
     server_name rerolog.koreacentral.cloudapp.azure.com;
     ssl_certificate /.cert/fullchain.pem;
     ssl_certificate_key /.cert/privkey.pem;
+    ssl_protocols TLSv1.1 TLSv1.2;
 
-    access_log  /var/log/nginx/host.access.log  main;
+    server_tokens off;
+
+    access_log  /var/log/nginx/access.log  combined;
+
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Content-Type-Options   nosniff;
+
+    client_max_body_size 10M;
+    client_body_timeout 60;
+    client_header_timeout 60;
+    keepalive_timeout  65;
+    send_timeout 120;
 
     if ($scheme = http) {
         return 301 https://$server_name$request_uri;
@@ -17,6 +29,7 @@ server {
         root   /usr/share/nginx/html;
         index  index.html;
         try_files $uri $uri/ /index.html;
+        autoindex off;
     }
 
     location /api {
@@ -31,4 +44,6 @@ server {
     location /.well-known/acme-challenge {
         root /.cert/;
     }
+
+    error_page 400 401 403 404 500 /error.html;
 }
