fix: 설정 파일 업데이트
이슈 번호: #깃허브이슈번호

--- a/deploy/compose.yml
+++ b/deploy/compose.yml
@@ -9,7 +9,7 @@ networks:
 
 services:
   db:
-    image: mysql:8.0.34
+    image: mysql:8.0.35
     restart: unless-stopped
     networks:
       - rerolog-network
@@ -70,3 +70,5 @@ services:
       - ./wait-for-it.sh:/wait-for-it.sh
       - ./nginx/nginx.conf:/etc/nginx/nginx/conf:ro
       - fe-build:/usr/share/nginx/html
+    env_file:
+      - .env
