--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "frontend",
     "version": "0.1.0",
     "private": true,
+    "type": "module",
     "dependencies": {
         "@headlessui/react": "^1.7.17",
         "@tanstack/react-query": "^5.14.6",
@@ -10,7 +11,6 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@types/jest": "^27.5.2",
-        "@types/node": "^16.18.67",
         "@types/react": "^18.2.42",
         "@types/react-dom": "^18.2.17",
         "@types/react-router-dom": "^5.3.3",
@@ -20,16 +20,15 @@
         "react-dom": "^18.2.0",
         "react-quill": "^2.0.0",
         "react-router-dom": "^6.20.1",
-        "react-scripts": "^5.0.1",
         "typescript": "^4.9.5",
         "web-vitals": "^2.1.4",
         "zustand": "^4.5.0"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview"
     },
     "browserslist": {
         "production": [
@@ -45,8 +44,10 @@
     },
     "devDependencies": {
         "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+        "@types/node": "^20.11.20",
         "@typescript-eslint/eslint-plugin": "^6.13.2",
         "@typescript-eslint/parser": "^6.13.2",
+        "@vitejs/plugin-react": "^4.2.1",
         "autoprefixer": "^10.4.16",
         "eslint": "^8.55.0",
         "eslint-config-airbnb": "^19.0.4",
@@ -62,6 +63,7 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "postcss": "^8.4.32",
         "prettier": "^3.1.1",
-        "tailwindcss": "^3.3.6"
+        "tailwindcss": "^3.3.6",
+        "vite": "^5.1.4"
     }
 }
