--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "target": "es5",
+        "target": "ESNext",
         "lib": ["dom", "dom.iterable", "esnext"],
         "allowJs": true,
         "skipLibCheck": true,
@@ -15,7 +15,11 @@
         "isolatedModules": true,
         "noEmit": true,
         "jsx": "preserve",
-        "baseUrl": "src"
+        "baseUrl": ".",
+		"paths": {
+			"@/*": ["./src/*"]
+		},
+		"types": ["vite/client"],
     },
     "include": ["src"]
 }
