--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
         "@types/react-dom": "^18.2.17",
         "@types/react-router-dom": "^5.3.3",
         "axios": "^1.6.2",
+        "gh-pages": "^6.1.1",
         "html-react-parser": "^5.0.11",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
