--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "https://rerolog.github.io",
     "name": "frontend",
     "version": "0.1.0",
     "private": true,
@@ -30,7 +31,9 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "deploy": "gh-pages -d build",
+        "predeploy": "npm run build"
     },
     "browserslist": {
         "production": [
