fix: 홈페이지 경로 수정

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "http://rerolog.github.io/rerolog",
+    "homepage": "http://rerolog.github.io",
     "name": "frontend",
     "version": "0.1.0",
     "private": true,
