merge: rerolog main 브랜치 병합

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,10 +16,10 @@
         "noEmit": true,
         "jsx": "preserve",
         "baseUrl": ".",
-		"paths": {
-			"@/*": ["./src/*"]
-		},
-		"types": ["vite/client"],
+        "paths": {
+            "@/*": ["./src/*"]
+        },
+        "types": ["vite/client"]
     },
     "include": ["src"]
 }
